train-test split

--- a/StockMarketAnalysis.ipynb
+++ b/StockMarketAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f52ebdb4",
+   "id": "2a86ac8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fad1a5e2",
+   "id": "e175c548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9c837bed",
+   "id": "332cc149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "074116ee",
+   "id": "cfc8ae70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fecf72e3",
+   "id": "c604c0f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f9a3348c",
+   "id": "1994f7b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f37a1fa2",
+   "id": "0c6a138a",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d6d95c16",
+   "id": "a7bdd831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "240e6641",
+   "id": "84877985",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b6a25a5e",
+   "id": "bd9234ca",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fccee920",
+   "id": "b6a91280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ca30f469",
+   "id": "f48e601d",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f94e649d",
+   "id": "39c2717c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "084de53e",
+   "id": "740b5c87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,8 +802,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "b82694ca",
+   "execution_count": 49,
+   "id": "dca9ec20",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "[5454 rows x 4 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,11 +952,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2d4cea20",
+   "execution_count": 55,
+   "id": "66e79696",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#80-20 train-test split\n",
+    "test_ratio = 0.2\n",
+    "training_ratio = 1 - test_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "bb296084",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_size: 4363\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_size = int(training_ratio * len(stockprices))\n",
+    "test_size = int(test_ratio * len(stockprices))\n",
+    "print(f'train_size: {train_size}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "18da3c32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_size: 1090\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'test_size: {test_size}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "072034eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training with first 80%\n",
+    "train = stockprices[:train_size][['Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0a86cb21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing with last 20%\n",
+    "test = stockprices[train_size:][['Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "bc66993f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Split the time-series data into training seq X and output value Y\n",
+    "def extract_seqX_outcomeY(data, N, offset):\n",
+    "    \"\"\"\n",
+    "    Split time-series into training sequence X and outcome value Y\n",
+    "    Args:\n",
+    "        data - dataset\n",
+    "        N - window size, e.g., 50 for 50 days of historical stock prices\n",
+    "        offset - position to start the split\n",
+    "    \"\"\"\n",
+    "    X = []\n",
+    "    y = []\n",
+    "\n",
+    "    for i in range(offset, len(data)):\n",
+    "        X.append(data[i - N : i])\n",
+    "        y.append(data[i])\n",
+    "\n",
+    "    return np.array(X), np.array(y)"
+   ]
   }
  ],
  "metadata": {
