--- a/StockMarketAnalysis.ipynb
+++ b/StockMarketAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a86ac8b",
+   "id": "488d04fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e175c548",
+   "id": "ccb55efd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "332cc149",
+   "id": "da84ddb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cfc8ae70",
+   "id": "0429d8fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c604c0f6",
+   "id": "79d96d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1994f7b3",
+   "id": "be916810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0c6a138a",
+   "id": "42426eaf",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a7bdd831",
+   "id": "48ed956f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "84877985",
+   "id": "21b86994",
    "metadata": {},
    "outputs": [
     {
@@ -619,8 +619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "bd9234ca",
+   "execution_count": 79,
+   "id": "af82a034",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "dict"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,19 +640,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b6a91280",
+   "execution_count": 80,
+   "id": "b273337c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convert data to DataFrame\n",
+    "# convert data to DataFrame\n",
     "df = pd.DataFrame(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f48e601d",
+   "execution_count": 81,
+   "id": "8d8039ad",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "[105 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,18 +782,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "39c2717c",
+   "execution_count": 82,
+   "id": "4f4d5c53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#downloaded csv file of AAPL stockprices from Neptune.ai"
+    "# Downloaded csv file of AAPL stockprices from Neptune.ai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "740b5c87",
+   "execution_count": 83,
+   "id": "f1b7ccae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,8 +802,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "dca9ec20",
+   "execution_count": 84,
+   "id": "24e684a8",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "[5454 rows x 4 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,20 +952,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "66e79696",
+   "execution_count": 85,
+   "id": "29d5cbc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#80-20 train-test split\n",
+    "# 80-20 train-test split\n",
     "test_ratio = 0.2\n",
     "training_ratio = 1 - test_ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "bb296084",
+   "execution_count": 86,
+   "id": "df66828c",
    "metadata": {},
    "outputs": [
     {
@@ -984,8 +984,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "18da3c32",
+   "execution_count": 87,
+   "id": "cace9b6e",
    "metadata": {},
    "outputs": [
     {
@@ -1002,34 +1002,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "072034eb",
+   "execution_count": 88,
+   "id": "fbc8846a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#training with first 80%\n",
+    "# Training with first 80%\n",
     "train = stockprices[:train_size][['Close']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "0a86cb21",
+   "execution_count": 89,
+   "id": "f1931fa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#testing with last 20%\n",
+    "# Testing with last 20%\n",
     "test = stockprices[train_size:][['Close']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "bc66993f",
+   "execution_count": 90,
+   "id": "9ebffca2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Split the time-series data into training seq X and output value Y\n",
+    "# Split the time-series data into training seq X and output value Y\n",
     "def extract_seqX_outcomeY(data, N, offset):\n",
     "    \"\"\"\n",
     "    Split time-series into training sequence X and outcome value Y\n",
@@ -1047,6 +1047,49 @@
     "\n",
     "    return np.array(X), np.array(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "255a2cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the metric RMSE\n",
+    "def calculate_rmse(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate the Root Mean Squared Error (RMSE)\n",
+    "    \"\"\"\n",
+    "    rmse = np.sqrt(np.mean((y_true - y_pred) ** 2))\n",
+    "    \n",
+    "    return rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "4966dc0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate MAPE\n",
+    "def calculate_mape(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate the Mean Absolute Percentage Error (MAPE) %\n",
+    "    \"\"\"\n",
+    "    y_pred, y_true = np.array(y_pred), np.array(y_true)\n",
+    "    mape = np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
+    "    \n",
+    "    return mape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "941177cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
